# IIViewer

./: .clang-tidy  .gitignore  AGENTS.md  AboutDlg.cpp  AppSetting.cpp  CMakeLists.txt  CONTRIBUTING.md  DataVisualDlg.cpp  IIPviewer.qrc  IIPviewer_ui.cpp  IIViewer.qrc  ImageWidget.cpp  README.md  RawFileInfoDlg.cpp  YuvFileInfoDlg.cpp  config.h.in  iipviewer.cpp  iipviewer.qrc  iipviewer.rc  index-en.html  index.html  main.cpp
.github/workflows/: cmake-macos-platform.yml  cmake-ubuntu-platform.yml  cmake-windows-platform.yml  deploy-pages.yml  release-macos_arm64.yml  release.yml  release_ubuntu_arm64.yml  release_ubuntu_x64.yml  release_windows_x64.yml
cmake/: windeployqt.cmake  wix_extra_dirs.wxs  wix_patch.xml
icon/: 64.xpm  IIViewer.icns  default.desktop
inc/: AboutDlg.h  AppSetting.h  ColorSpaceCvt.h  CurveAdjustDialog.h  DataVisualDlg.h  IIPOptionDialog.h  IIPOptionDialog.ui  IIPviewer.h  IIPviewer_ui.h  IIVOptionDialog.h  IIVOptionDialog.ui  IIViewer.h  IIViewer_ui.h  ImageWidget.h  ImgDiffReportDlg.h  ImgInfoDlg.h  PenColorButton.h  RawFileInfoDlg.h  RawFileInfoDlg.ui  RoiDataExportDlg.h  RoiDataShowDlg.h  TitleBar.h  YuvFileInfoDlg.h  YuvFileInfoDlg.ui  common_type.h  iipviewer.h  linechart.h  resource.h
inc/dng/: dng_image.h  dng_parser.h  ljpeg_decoder.h  tiff_reader.h
scripts/: README.md  create_dmg.sh  create_dmg_advanced.sh  create_pkg.sh  package_macos.sh  test_packaging.sh
src/: AboutDlg.cpp  AppSetting.cpp  ColorSpaceCvt.cpp  CurveAdjustDialog.cpp  DataVisualDlg.cpp  IIPOptionDialog.cpp  IIPviewer.cpp  IIPviewer.qrc  IIPviewerLrImgProcess.cpp  IIPviewer_ui.cpp  IIVOptionDialog.cpp  IIViewer.cpp  IIViewer.manifest  IIViewer.rc  IIViewerLoadFile.cpp  IIViewerLrImgProcess.cpp  IIViewer_ui.cpp  ImageWidget.cpp  ImageWidgetRoiExport.cpp  ImageWidgetRoiShowText.cpp  ImgDiffReportDlg.cpp  ImgInfoDlg.cpp  Main.cpp  PenColorButton.cpp  RawFileInfoDlg.cpp  RoiDataExportDlg.cpp  RoiDataShowDlg.cpp  TitleBar.cpp  YuvFileInfoDlg.cpp  iipviewer.cpp  iipviewer.qrc  main.cpp
src/dng/: dng_parser.cpp  ljpeg_decoder.cpp  tiff_reader.cpp
translations/: IIViewer_zh.ts
